# warpgate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build  out_file.txt
build-scripts/: build.py  utils.py
resources/: README.txt  client_config1.json  data2.txt  data3.txt  test_task_1.json
src/: Task.cpp  Task.h  consts.h  log.h  main.cpp  types.h  utils.cpp  utils.h  warpgate.cpp  warpgate.h
src/client/: client.cpp  client.h  client_main.cpp  library.cpp  main.cpp
src/client/dynamic_library/: library.cpp  library.h
src/server/: server.cpp
src/shared/: Task.cpp  Task.h  utils.cpp  utils.h
src/tasklib/: tasklib.cpp
src/tracker/: tracker.cpp  tracker.h  tracker_main.cpp
